fdo#32958 join editor: remove empty lines

Change-Id: If150261bae55cf91c8a344f34c79194ad29db903